<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">contacts-generator</string>
    <string name="generate">Generate</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="autogenerated_contacts">Autogenerated contacts: %d</string>
    <string name="intro">Info</string>
    <string name="intro_details">
        This application generates contacts with random names and phone numbers 
        (and \"autogenerated\" note attached to them). All generated contacts can then be removed 
        by clicking on "Clear". 
    </string>

</resources>