<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:text="@string/intro_details"/>
    
    <TextView 
        android:id="@+id/contacts_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/autogenerated_contacts"/>
    

    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center">

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:max="100" />

        <TextView
            android:id="@+id/generate_count"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="center" />
        
    </LinearLayout>

    <Button
        android:id="@+id/generate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate" />

    <Button
        android:id="@+id/clear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear" />

     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center" 
         android:layout_marginTop="20dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp">

        <ProgressBar
            android:id="@+id/progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:max="100" />

        <TextView
            android:id="@+id/progress_count"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="center" />
        
    </LinearLayout>
    
    <Button
        android:id="@+id/cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/cancel" />
    
</LinearLayout>